syntax = "proto3";

option go_package = "./pkg/api/protobuf/poll";

import "google/protobuf/timestamp.proto";

message Field {
  uint32 id = 1;
  string poll_id = 2; // uuid как строка
  string desc = 3;
  float procent = 4;
}

// Аналог структуры Poll из Go
message Poll {
  string id = 1; // uuid как строка
  google.protobuf.Timestamp created_at = 2;
  string author_id = 3;
  string desc = 4;
  repeated Field fields = 5;
  bool limited_for_time = 6;
  google.protobuf.Timestamp delete_in = 7;
  bool closed = 8;
}

message RequestGet{
    string ID = 1;
}

message RequestUpdate{
    string ID = 1;
    string Key = 2;
    string Value = 3;
}

message Response{
    string error = 1;
    bool ok = 2;
}

message RequestDelete{
    string ID = 1;
}

message RequestCreate{
    Poll Form = 1;
}

message RequestGetMore{
    string Key = 1;
    string Value = 2;
}

message GetResponse{
    Response Response = 1;
    Poll Poll = 2;
}

message GetMoreResponse{
    Response Response = 1;
    repeated Poll Forms = 2;
}

service PollService{
    rpc Get (RequestGet) returns (GetResponse);
    rpc GetMore (RequestGetMore) returns (GetMoreResponse);
    rpc Update (RequestUpdate) returns (Response);
    rpc Delete (RequestDelete) returns (Response);
    rpc Create (RequestCreate) returns (Response);
}